[package]
name = "aoc2017"
version = "0.1.0"
edition = "2021"
authors = ["Connor Mooney-Collett <connor.mooneycollett@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-utils = { git = "https://github.com/misfits42/aoc-utils", branch = "main" }
fancy-regex = "0.11.0"
itertools = "0.10.5"
